restructing design and discussion

--- a/_posts/thesis_chapters/2024-3-4-Design.md
+++ b/_posts/thesis_chapters/2024-3-4-Design.md
@@ -8,7 +8,6 @@ layout: post
 categories: chapter
 title: 4. Exploration of the Formative Learning Design Process
 ---
-
 -   [Exploration of the Formative Learning Design
     Process](#exploration-of-the-formative-learning-design-process)
     -   [Research Questions - April
@@ -98,6 +97,7 @@ title: 4. Exploration of the Formative Learning Design Process
         -   [Summary of barriers and tensions explored in this
             chapter](#summary-of-barriers-and-tensions-explored-in-this-chapter)
         -   [Link to next chapter](#link-to-next-chapter)
+
 
 # Exploration of the Formative Learning Design Process
 
@@ -1099,7 +1099,10 @@ MAKE MORE OF THE P1 -> P2 SHIFT AT START
 
 This experience aligns with research in this area explored in the literature review which explore pedagogies to address barriers concerning identity and technology-driven practices [@kafai_constructionist_2015-1].
 
-This conflict involved accumulating tensions which resulted in families feeling anxiety and alienation from the group coding environment and associated peer working dynamics.
+These contradictions involved accumulating tensions which resulted in families feeling anxiety and alienation from the group coding environment and associated peer working dynamics.
+
+My journal notes see an evolution of attempts to try to build into the program, activities which help build the participants sense of their own identities of game makers or more generally digital designers. These are detailed later.
+
 
 I illustrate this conflict using the experience of one family who withdrew from P1 three weeks before the end of the programme. While members of this family were able to engage in planing via sketching on paper and in creating pixel art, in later stages they were reliant on others to implement code changes.
 
@@ -1158,9 +1161,6 @@ That week I had omitted them as I felt a sense of urgency coming from families t
 <!-- In this emergent design, they had mostly completed asset design and narrative development and the only coding remained. I thus wanted to address the tension between completing the project and alienation from just coding. -->
 
 
-
-
-
 ### Using Physical Maps of Missions as Game Design Patterns
 
 I used flip chart paper and print outs to draw a coastal landscape with GDPs represented as different islands.  I asked learners to create and personalise a movable marker representing themselves. When learners selected their next mission, they moved their counter to the relevant island. Thus learners had to be intentional about their next goal and were implicitly encouraged to stick to it.
@@ -1188,67 +1188,17 @@ The new resources seem welcomed by the parent. This is probably as in previous s
 While it is beyond the remit of this thesis to examine the impact of these processes in more curricular focused environments, the following section offers a synthesis of the ideas in explored in this chapter and alignment with existing research.
 
 
+### On a drama processes
 
-
-
-
-
-### Exploring the impact of a drama processes
-
-The introduction of a drama process was introduced in response to a the barriers to participation caused by not identifying with the culture of coding or gaming. This section describes the addition ot the intervention and explores its value as a pedagogical tool to seed game coding practices and to develop learner agency.
-
-
-#### Rationale of use of drama processes
-
-The starter game described below led me to connect the work with drama process work to develop ways to encourage diverse and playful approaches to making. The following sections describe the process.
+The introduction of a drama process was introduced in response to a the barriers to participation caused by not identifying with the culture of coding or gaming.
 
 #### A game encouraging maker / player types
 
-My journal notes see an evolution of attempts to try to build into the program, activities which help build the participants sense of their own identities of game makers or more generally digital designers.
+The drama process work in P3 to develop ways to encourage diverse and playful approaches to making had its roots in a game introduced in P2.
 
-In and early tentative attempt to define in broad strokes the types of game maker behaviour and underlying goals. In doing this I have taken inspiration from Bartle's game player types [@hamari_player_2014]. I translated player types to maker types based on notes in my observation journal and extracts from screen capture data. The following list of *Game Maker *types:
+I introduced a warm-up activity in P2 where participants took part in an interactive the Bartle test
 
--   **Social makers:** form relationships with other game makers and players by finding out more about their work and telling stories in their game -   
-- **Planners:** like to study to get a full knowledge of the tools and what is possible before they build up their game step-by-step
--   **Magpie makers:** like trying out lots of different things and happy to borrow code, images and sound from anywhere for quick results
--   **Glitchers:** mess around with the code trying to see if they can break it interesting ways and cause a bit of havoc for other users
-
-An additional rationale for this process was to help reduce potential internal bias about the kind of process that a computer programmer should adopt, echoing the call for pluralism in approaches explored in the literature review [@papert_epistemological_1990]. I wanted to try to communicate a message to participants that when you are learning something hard it is of value follow your own working preferences and try to discover a creative style that suits you.
-
-
-
-
-<!-- #### Building Identities as Game Makers (dropped) -->
-
-<!-- NOTE - MAY NEED TO REWRITE to clearly precursor next chapter -->
-
-
-<!-- One warm activities that took on a life of its own was a group activity of taking a Bartle test (what kind of game player are you) as extended spectrum line/grid activity [FIND DESCRIPTION SOURCE]. The process of exploring identity in this way surfaced the cheekiness of some young people and the pleasure they took in demonstrating their playful mischievousness. I began to make journal notes on this subject and talk to other games study practioners. I began to ask the question can the surfacing maker types (as per player types) encourage awareness and celebrate the emerging practices that the community was producing. -->
-<!--
-My journal notes see an evolution of attempts to try to build into the program, activities which help build the participants sense of their own identities of game makers or more generally digital designers. In and early tentative attempt to define in broad strokes the types of game maker behaviour and underlying goals.
-
-In doing this I have taken inspiration from Bartle's game player types [@hamari_player_2014].
-EXPLAIN HOW.  
-Side missions or side quests are also use#### Rationale of use of drama processes
-
-The game above led me to connect the work with drama process work to develop ways to encourage diverse and playful approaches to making. The following sections describe the process. d in open world games are used in part to appeal to different kinds of players [@bartle_hearts_nodate].
-
-I translated player types to maker types based on notes in my observation journal and extracts from screen capture data. The following list of *Game Maker *types:
-
- -   **Social makers:** form relationships with other game makers and players by finding out more about their work and telling stories in their game -   
- - **Planners:** like to study to get a full knowledge of the tools and what is possible before they build up their game step-by-step
- -   **Magpie makers:** like trying out lots of different things and happy to borrow code, images and sound from anywhere for quick results
- -   **Glitchers:** mess around with the code trying to see if they can break it interesting ways and cause a bit of havoc for other users -->
-
-
-
-<!-- there's a limit here as the drama scenario is done on people already engaged
-so there's a problem in getting any data from this
-however the rationale is intact and  -->
-
-<!-- For examples in the Vignette of S and T's interaction we can see attributes of the child as a Glitcher. In terms of understanding of the game as a dynamic system, this is seen clearly in the parent's alarm at the child's deletion of all elements of hazard. The parent is keen to keep a sense of game balance to ensure a sense of challenge for the imagined player. "It's no fun having a game without any hazards to avoid." The child seems determined to remove all hazards.  -->
-
-This line of thinking developed from a warm-up activity trialled in P3 were participants took the Bartle test (what kind of game player are you).  
+Describe Bartle test.
 
 ![\ Illustration 10: Bartle Player Type Test](./Pictures/bartle_test.png)}
 
@@ -1262,6 +1212,16 @@ The process of exploring identity in this way surfaced the cheekiness of some yo
 As an example some players created impossible or overly easy game levels. They appeared aware of implications for game balance but is taking pleasure in this seeming destruction of the key challenge of the game as an act of disruptive play. They seem to take pleasure from ignoring concepts of what should be done to maintain game balance and from the sense of shock from their current audience her parent. Going against this convention is a type of playful destruction in this context. The process mirrors play theory concept of playing against the game or dark play [@sutton-smith_ambiguity_2001].
 
 Below I outline how I designed to encourage this behaviour.
+
+In and early tentative attempt to define in broad strokes the types of game maker behaviour and underlying goals. In doing this I have taken inspiration from Bartle's game player types [@hamari_player_2014]. I translated player types to maker types based on notes in my observation journal and extracts from screen capture data. The following list of *Game Maker *types:
+
+-   **Social makers:** form relationships with other game makers and players by finding out more about their work and telling stories in their game -   
+- **Planners:** like to study to get a full knowledge of the tools and what is possible before they build up their game step-by-step
+-   **Magpie makers:** like trying out lots of different things and happy to borrow code, images and sound from anywhere for quick results
+-   **Glitchers:** mess around with the code trying to see if they can break it interesting ways and cause a bit of havoc for other users
+
+My rationale for this process was to promote awareness of pluralistic programming process [@papert_epistemological_1990]. I wanted to try to communicate a message to participants that when you are learning something hard it is of value follow your own working preferences and try to discover a creative style that suits you.
+
 
 #### Description drama process using extracts from vignettes
 <!-- q: How much to reference back to previous chapter? -->
@@ -1280,7 +1240,7 @@ The following tenets of MoE from Aiken's summary [-@aitken_dorothy_2013] apply. 
 
 _Contracting into drama_
 
-As a facilitator, I indicate that we are entering a dramatic process and attempt to draw everyone along with me using the following sentence _"This is kind of a story now. We are entering a story. You have to use your imagination"_. This serves to start the process of contracting in a drama. As a way to introduce the imagined audience, I reference that the games are online and have been noticed by aliens. The use of heavy irony in my voice when concluding the scenario, "I'm pretty sure it's true" and the resulting laughter form an informal collusion that we are playing along with this fiction. The collusion is noted by both parents and children in recorded exchanges. For example, after engaging with a code example provided by myself in the role of the aliens, one pair make the following comment.
+As a facilitator, I indicate that we are entering a dramatic process and attempt to draw everyone into a commitment to the process. The collusion is noted by both parents and children in recorded exchanges. For example, after engaging with a code example provided by myself in the role of the aliens, one pair make the following comment.
 
 > Parent: Look, this is what Mick's showed, what Mick's has done.
 
