beginning to structure drama process

--- a/_posts/thesis_chapters/tocs/2024-3-4-Design.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2024-3-4-Design.md_toc.md
@@ -62,10 +62,7 @@
             work](#conflicts-due-to-identity-clashes-and-dysfunctional-group-work)
         -   [Using Physical Maps of Missions as Game Design
             Patterns](#using-physical-maps-of-missions-as-game-design-patterns)
-        -   [Exploring the impact of a drama
-            processes](#exploring-the-impact-of-a-drama-processes)
-            -   [Rationale of use of drama
-                processes](#rationale-of-use-of-drama-processes)
+        -   [On a drama processes](#on-a-drama-processes)
             -   [A game encouraging maker / player
                 types](#a-game-encouraging-maker-player-types)
             -   [Description drama process using extracts from
