--- a/_posts/thesis_chapters/2024-3-4-Design.md
+++ b/_posts/thesis_chapters/2024-3-4-Design.md
@@ -436,15 +436,12 @@ NOTE - Explore how performed in line with other research - e.g. DBR (Barab) and 
 ## Conflicts and design tensions experienced by participants and facilitator/s
 
 
-This section examines design contradictions between system elements and tensions experience by participants which developed into conflicts which significant in stopping participant progress.
-
-The term conflict here is used to describe a more serious break down of activity due to an accumulation of contradictions and tensions.
+This section examines design contradictions between system elements and tensions experience by participants which developed into conflicts which significant in stopping participant progress. The term conflict here is used to describe a more serious break down of activity due to an accumulation of contradictions and tensions.
 
 The processes here aligns with AT approach of formative interventions in that the surfacing of tensions due to changes in the learning design over time are examined. I chart the detail of the evolution of resources and other responses used helps illuminate broader, systemic issues concerns in the overall activity [@barab_using_2002].
 
-These tensions are outlined from a cultural perspective,
 
-It explores areas of tensions and barriers.  
+As such, this chapter explores the following areas of tensions and barriers.  
 NOTE - (be clearer on terms still)
 
 
@@ -1228,7 +1225,7 @@ This section references the following appendices.
 
 - appendix 4.x : Vignette of introduction of the drama process and how end goal and side missions are introduced.
 - appendix 4.x - vignette 2 of the reflection in role.  
-- 
+-
 
 
 The process of introducing a scenario for participant to respond to is common in project based learning in this vignette. Here it is extended using a dramatic element in line with Heathcote on Mantle of the Expert and other process drama techniques (explored in Lit Review). In this section, I describe the vignette using concepts from MoE. Further analysis follows in a later section.
