edits to tools section

--- a/_posts/thesis_chapters/tocs/2024-3-4-Design.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2024-3-4-Design.md_toc.md
@@ -34,18 +34,16 @@
                 movement](#variable-editing-for-player-movement)
             -   [Level design and
                 prototyping](#level-design-and-prototyping)
-            -   [Background colour and a pixel
-                art](#background-colour-and-a-pixel-art)
-        -   [Observations on the game template and core
-            tools](#observations-on-the-game-template-and-core-tools)
         -   [Design adaptations to facilitate novice use of a code
             playground](#design-adaptations-to-facilitate-novice-use-of-a-code-playground)
+            -   [Remixing and community
+                inspiration](#remixing-and-community-inspiration)
             -   [Addressing code syntax
                 errors](#addressing-code-syntax-errors)
-        -   [Distributed vs. self-contained approaches to asset
-            creation](#distributed-vs.-self-contained-approaches-to-asset-creation)
-        -   [Remixing and showcasing
-            projects](#remixing-and-showcasing-projects)
+            -   [Distributed vs. self-contained approaches to asset
+                creation](#distributed-vs.-self-contained-approaches-to-asset-creation)
+        -   [Observations on the game template and core
+            tools](#observations-on-the-game-template-and-core-tools)
     -   [Participant conflict associated with project navigation and use
         of
         documentation](#participant-conflict-associated-with-project-navigation-and-use-of-documentation)
