--- a/_posts/thesis_chapters/2024-3-4-Design.md
+++ b/_posts/thesis_chapters/2024-3-4-Design.md
@@ -1121,20 +1121,16 @@ MAKE MORE OF THE P1 -> P2 SHIFT AT START
 
 This experience aligns with research in this area explored in the literature review which explore pedagogies to address barriers concerning identity and technology-driven practices [@kafai_constructionist_2015-1]. These contradictions involved accumulating tensions which resulted in families feeling anxiety and alienation from the group coding environment and associated peer working dynamics. My journal notes see an evolution of attempts to try to build into the program, activities which help build the participants sense of their own identities of game makers or more generally digital designers. These are detailed later.
 
-I illustrate this conflict using the experience of one family who withdrew from P1 three weeks before the end of the programme. While members of this family were able to engage in planing via sketching on paper and in creating pixel art, in later stages they were reliant on others to implement code changes. The freedom of choice and imagination allowed by designing on paper and via pixel art created compounding tensions. One crisis point involved a frustration of a child who was not able to implement a feature they wanted to add to the game next. A 3d bee design roaming a 3D landscape.
+I illustrate this conflict using the experience of one family who withdrew from P1 three weeks before the end of the programme. While members of this family were able to engage in planing via sketching on paper and in creating pixel art, in later stages they were reliant on others to implement code changes. The freedom of choice and imagination allowed by designing on paper and via pixel art created compounding tensions. One crisis point involved a frustration of a child who was not able to implement a feature they wanted to add to the game next. A 3d bee design roaming a 3D landscape. I encouraged personal expression for the purposes of engagement and motivation. However, here it can lead to conflict and frustration as the desired changes of the child were not realistic to the technical scope of the project. The previous section explored the use of two dimensional (2D) platformer game as a technical template in P2. I also addressed participant expectations of an acceptable project scope for our timeframe as a non technical process.
+<!--
+When the family withdrew, in my journal notes I reflected that the they shared of alienation from the group process occurred in a session where, due to a sense of urgency to complete games, I had omitted drama-based warm up activities. Instead as participant entered I began to support to help some participants debug some pressing code errors. -->
 
-I encouraged personal expression for the purposes of engagement and motivation. However, here it can lead to conflict and frustration as the desired changes of the child were not realistic to the technical scope of the project.
-
-The previous section explored the use of two dimensional (2D) platformer game as a technical template in P2. I also
-addressed participant expectations of an acceptable project scope for our timeframe as a non technical process.
-
-When the family withdrew, in my journal notes I reflected that the they shared of alienation from the group process occurred in a session where, due to a sense of urgency to complete games, I had omitted drama-based warm up activities. Instead as participant entered I began to support to help some participants debug some pressing code errors.
-
-They shared in feedback (see appendix 4.x) the moment that decided their withdrawal. that at one point they "looked around and just saw people doing hardcore coding and no longer felt that they belonged". In the end stages of the game production process, due to the dynamic of the larger group, they were reliant on others to implement code changes for their imagined game, unable to contribute fully at this point and found themselves isolated. Thus a contributing factor to this families alienation were tensions engendered by the large group size and compounded by frustrations stemming from unfamiliarity with tools and processes. In participant feedback, the  parent of this family described in the previous section indicated that it took too long before in the planning stage and called for more hands on play and use of the tools of production before being called on to make creative decisions. The parent likened this to an arts studio approach. Feedback which influenced choices outlined in other sections of this chapter.
+When the family withdrew, they shared in feedback (see appendix 4.x) the moment that decided their withdrawal. that at one point they "looked around and just saw people doing hardcore coding and no longer felt that they belonged". In the end stages of the game production process, due to the dynamic of the larger group, they were reliant on others to implement code changes for their imagined game, unable to contribute fully at this point and found themselves isolated. Thus a contributing factor to this families alienation were tensions engendered by the large group size and compounded by frustrations stemming from unfamiliarity with tools and processes. In participant feedback, the  parent of this family described in the previous section indicated that it took too long before in the planning stage and called for more hands on play and use of the tools of production before being called on to make creative decisions. The parent likened this to an arts studio approach. This feedback contributed to choices outlined in other sections of this chapter. (WHICH ONES)
 
 
 <!-- Based on my previous teaching experience, analysis of literature and knowledge of platform games, I pre-prepared a set of coded example and tutorials to implement a range of game design patterns. -->
 
+DROP - COMPRESS - CONCLUSION?
 The incident lead me to greater reflection on ongoing measures needed to prevent participant drop out for due to cultural tensions and negative affect to the working community. These include:
 
 -   An awareness of the danger that those more confident in coding create more involved code problems that need more facilitator time, potentially making others feel less valued.
@@ -1173,33 +1169,8 @@ That week I had omitted them as I felt a sense of urgency coming from families t
 
 <!-- In this emergent design, they had mostly completed asset design and narrative development and the only coding remained. I thus wanted to address the tension between completing the project and alienation from just coding. -->
 
-
-### Using Physical Maps of Missions as Game Design Patterns
-
-I used flip chart paper and print outs to draw a coastal landscape with GDPs represented as different islands.  I asked learners to create and personalise a movable marker representing themselves. When learners selected their next mission, they moved their counter to the relevant island. Thus learners had to be intentional about their next goal and were implicitly encouraged to stick to it.
-
-![learning islands](./Pictures/navigational_paper_map.png){width=95%}
-![learning islands]({{ site.imgurl }}/_posts/thesis_chapters/Pictures/navigational_paper_map.png){width=95%}
-_Missions as Islands_
-
-My motivations for this intervention were that it encourage a sense of community and peer learning, to help learners navigate their design experience and that the process would encourage reflect on the coding concepts or other learning dimensions that they had been working with. The use of space on the map on which GDP were arranged aimed to communicate which patterns were more complicated to implement.  Starting patterns limited the maximum complexity of missions.
-
-The following excerpts of dialogue are from a fuller transcription in appendix 4.x
-
-  Mick(f): I'm putting the ones that are hardest further away from our home island. So, because keys and doors is quite tricky, I'm going to put that one over there in the corner, if that's one that you're working on.  ( Mick cuts a out an image from [^4] representing a GDP of key and doors.)     Olivia(c): So I've gone really far away on the map.
-
-The process of mapping the difficulty is something that the child picks up on here. Moments after we see a parent using the map and the resources to help her child fix a goal for the session.
-
-  Rozanne(p): Oh that's something you were wanting to do	(Roxanne points at a cut out that Mick has just stuck down.)
-  Richie(c): I like the idea of making the enemies move.
-  Roxanne(p): Ok, there's a worksheet here about that. So you don't want to any any heath meter?
-  Richie(c): No.
-  Roxanne(p): At least not right now. You want to to do this, on a sheet, right here, here you go.	(Roxanne waves sheet and smiles at Mick.)
-
-The new resources seem welcomed by the parent. This is probably as in previous sessions there had been conflict between them about goals. The process of aiding reflection and meta-cognition through the use of visual materials in the form of a map aligns with inclusive pedagogical design principles of UDL in that it provides means of action and expression. In chapter six, I explore the use of a process drama to achieve similar aims.
-
-While it is beyond the remit of this thesis to examine the impact of these processes in more curricular focused environments, the following section offers a synthesis of the ideas in explored in this chapter and alignment with existing research.
-
+### REMOVED
+COMPLETELY REMOVED SECTION ON PHYSICAL MAPS
 
 ### On a drama processes
 
@@ -1207,15 +1178,11 @@ The introduction of a drama process was introduced in response to a the barriers
 
 #### A game encouraging maker / player types
 
-The drama process work in P3 to develop ways to encourage diverse and playful approaches to making had its roots in a game introduced in P2.
-
-I introduced a warm-up activity in P2 where participants took part in an interactive the Bartle test. The Bartle test draws on work which ...
+The drama process work in P3 to develop ways to encourage diverse and playful approaches to making had its roots in a game introduced in P2 where participants took part in an interactive the Bartle test. The Bartle test draws on work which ...
 
 The full process and rationale and initial reactions are detailed in appendix 4.x . In summary,
 
-The process was very engaging, parents responded that the process gave them new insight into the digital identities of their children.
-
-As part of the process I then proposed that there different game maker types and asked participants to evaluate and discuss with peers what kind of game maker they were. From the following list.
+The process was very engaging, parents responded that the process gave them new insight into the digital identities of their children. As part of the process I then proposed that there different game maker types and asked participants to evaluate and discuss with peers what kind of game maker they were. From the following list.
 
 -   **Social makers:** form relationships with other game makers and players by finding out more about their work and telling stories in their game -   
 - **Planners:** like to study to get a full knowledge of the tools and what is possible before they build up their game step-by-step
@@ -1228,6 +1195,8 @@ DATA REQUIRED FROM VIDEO!?
 This self evaluation helped confirm my own observations of different motivations driving different participation behaviours. Fuller discussion follows in chapter six.
 
 The success of activity spurred the creation of the creation of side-missions to be carried out in from of a dramatic process.
+
+AND - link more
 
 #### Description drama process using extracts from vignettes
 
@@ -1243,14 +1212,18 @@ This section references the following appendices.
 - appendix 4.x - vignette 2 of the reflection in role.  
 -
 
+The process of introducing a scenario for participant to respond to is common in project based learning in this vignette. Here it is extended using a dramatic element in line with Heathcote on Mantle of the Expert (MoE) and other process drama techniques (explored in Lit Review). The following section outlines key characteristics MoE [@aitken_dorothy_2013] in context.
 
-The process of introducing a scenario for participant to respond to is common in project based learning in this vignette. Here it is extended using a dramatic element in line with Heathcote on Mantle of the Expert and other process drama techniques (explored in Lit Review). In this section, I describe the vignette using concepts from MoE. Further analysis follows in a later section.
+
+
 
 <!--
 REMOVED
 While inspired by the work on Heathcote on Mantle of the Expert, not all element of the process align directly. For example, the drama does not try to position the participants as expert game makers in a professional context. However, t -->
 
-The following tenets of MoE from Aiken's summary [-@aitken_dorothy_2013] apply. Aitken's and Heathcote's terms follow in italics. Within a _fictional context_ a _responsible team_ is contracted into a _commission_ by a _client_. The facilitator _frames curriculum elements_ as productive tasks and plans for _tensions_ to arise involving: _authentic contexts_, _messiness of learning_, maintaining learner interest and _resilience_ to overcome the _grappling and struggling_ involved. The following sections explore some of these key concepts via the example in vignette.
+
+
+<!-- Aitken's and Heathcote's terms follow in italics. Within a _fictional context_ a _responsible team_ is contracted into a _commission_ by a _client_. The facilitator _frames curriculum elements_ as productive tasks and plans for _tensions_ to arise involving: _authentic contexts_, _messiness of learning_, maintaining learner interest and _resilience_ to overcome the _grappling and struggling_ involved. The following sections explore some of these key concepts via the example in vignette. -->
 
 _Contracting into drama_
 
