moving reflection to the appendix and the conclusion

--- a/_posts/thesis_chapters/2024-3-4-Design.md
+++ b/_posts/thesis_chapters/2024-3-4-Design.md
@@ -44,8 +44,6 @@ title: 4. Exploration of the Formative Learning Design Process
                 movement](#variable-editing-for-player-movement)
             -   [Level design and
                 prototyping](#level-design-and-prototyping)
-            -   [Background colour and a pixel
-                art](#background-colour-and-a-pixel-art)
         -   [Design adaptations to facilitate novice use of a code
             playground](#design-adaptations-to-facilitate-novice-use-of-a-code-playground)
             -   [Remixing and community
@@ -70,21 +68,18 @@ title: 4. Exploration of the Formative Learning Design Process
         activity](#responding-to-tensions-and-barriers-in-cultural-aspects-of-the-game-making-activity)
         -   [Conflicts due to identity clashes and dysfunctional group
             work](#conflicts-due-to-identity-clashes-and-dysfunctional-group-work)
-        -   [Using Physical Maps of Missions as Game Design
-            Patterns](#using-physical-maps-of-missions-as-game-design-patterns)
+        -   [REMOVED](#removed)
         -   [On a drama processes](#on-a-drama-processes)
             -   [A game encouraging maker / player
                 types](#a-game-encouraging-maker-player-types)
             -   [Description drama process using extracts from
-                vignettes](#description-drama-process-using-extracts-from-vignettes)
-            -   [Description of Vignette
-                4.1.b](#description-of-vignette-4.1.b)
+                vignettes - LINK TO VIGNETTE
+                ONE](#description-drama-process-using-extracts-from-vignettes---link-to-vignette-one)
             -   [Use of side missions to encourage varied creative
                 practices](#use-of-side-missions-to-encourage-varied-creative-practices)
             -   [Relevant observations on side missions and drama from
                 the
                 data](#relevant-observations-on-side-missions-and-drama-from-the-data)
-            -   [Reflecting in role](#reflecting-in-role)
             -   [Observations on written interactions with the alien in
                 the
                 drama](#observations-on-written-interactions-with-the-alien-in-the-drama)
@@ -1198,7 +1193,7 @@ The success of activity spurred the creation of the creation of side-missions to
 
 AND - link more
 
-#### Description drama process using extracts from vignettes
+#### Description drama process using extracts from vignettes - LINK TO VIGNETTE ONE
 
 <!-- q: How much to reference back to previous chapter? -->
 
@@ -1214,14 +1209,9 @@ This section references the following appendices.
 
 The process of introducing a scenario for participant to respond to is common in project based learning in this vignette. Here it is extended using a dramatic element in line with Heathcote on Mantle of the Expert (MoE) and other process drama techniques (explored in Lit Review). The following section outlines key characteristics MoE [@aitken_dorothy_2013] in context.
 
-
-
-
 <!--
 REMOVED
 While inspired by the work on Heathcote on Mantle of the Expert, not all element of the process align directly. For example, the drama does not try to position the participants as expert game makers in a professional context. However, t -->
-
-
 
 <!-- Aitken's and Heathcote's terms follow in italics. Within a _fictional context_ a _responsible team_ is contracted into a _commission_ by a _client_. The facilitator _frames curriculum elements_ as productive tasks and plans for _tensions_ to arise involving: _authentic contexts_, _messiness of learning_, maintaining learner interest and _resilience_ to overcome the _grappling and struggling_ involved. The following sections explore some of these key concepts via the example in vignette. -->
 
@@ -1239,15 +1229,17 @@ As a facilitator, I indicate that we are entering a dramatic process and attempt
 
 _Facilitator activities in role_
 
-My role is a link between the participant and the fictional commissioners of the games. The transcript above (a fuller version is in appendix 4.x) captures a rare example of myself extended facilitator input as instruction. As a practitioner teaching technology, I try to limit teacher talk and being overly directive to prevent learner disengagement. COMPLETE.
+My role is a link between the participant and the fictional commissioners of the games. The transcript in appendix 4.x details an example of extended facilitator input as instruction. As a practitioner in this setting, I had tried to limit teacher instruction and to outline boundaries to prevent learner disengagement. However some input was needed to help address the previously explored tension choice with over-ambition, and signpost participants to needed documentation. The drama narrative helped resolve some of this personal tension by allowing me using the dramatic commission as a foil to help avoid the encounter feeling personally controlling [heathcote_drama_1985].
+CLARIFY - EXTERNALISING LIMITS TO ACTIVITY
 
 <!-- NOTE - support with lit? also is this one tension or two  -->
-
-Balancing leaner choice with over-ambition is a tension explored in the previous chapter. The drama narrative helped resolve some of this personal tension by allowing me to outline boundaries and be directive using the dramatic commission as a foil to help avoid the encounter feeling personally combative or controlling [heathcote_drama_1985].
 
 _Learner activities in role_
 
 Beyond the wider fictional frame of the making activity, learners were also sometimes asked to undertake some activities in role, in particular reflection in role. This and other example are explored via the second vignette.
+
+
+There is more evidence of the impact of the drama process in the vignette above. In the end of session reflection, Richie occupies a peripheral position and continues to interact with his laptop. However, he reacts positively when Ed's questions to the Weean are read out. He later adds to the discussion when it turns to the sabotage based missions set in the drama process. It is probably that the ability to represent his irreverent approach helped his participation in the more formal, collaborative reflection and feedback activity in a way that had not happened in previous sessions.
 
 <!-- Choices
 - an overview of Mi's interactions on 2019-03-18 - home interests of art, community help, playtesting and being playtested, use of tools, Molly:as a social coder compared to others.
@@ -1265,14 +1257,18 @@ Here we are looking at something cultural?? -->
 <!-- The secret missions were part of this workshop
 https://playthinklearn.net/blog/ten-steps-to-game-design/ -->
 
-There is more evidence of the impact of the drama process in the vignette above. In the end of session reflection, Richie occupies a peripheral position and continues to interact with his laptop. However, he reacts positively when Ed's questions to the Weean are read out. He later adds to the discussion when it turns to the sabotage based missions set in the drama process. It is probably that the ability to represent his irreverent approach helped his participation in the more formal, collaborative reflection and feedback activity in a way that had not happened in previous sessions.
+_Reflecting in Role_
 
-
-#### Description of Vignette 4.1.b
+One key activity that was carried out in role in P3 was end of session reflection.
 
 <!-- IS MORE DESCRIPTION NEEDED HERE. ? -->
 
-In this extract participants are invited to take turns showing their game, recapping their progress and outlining next steps to the alien observers. I play the role as a liaison facilitating the process for the fictional, remote audience. I also draw attention to the secret missions that had been distributed to participants (along with social missions - both explore later in this chapter).
+Vignette 4.1.b is a transcript which illustrates this  process. In the extract participants are invited to take turns showing their game, recapping their progress and outlining next steps to the alien observers. I play the role as a liaison facilitating the process for the fictional, remote audience. I also draw attention to the secret missions that had been distributed to participants, which along with social missions are explored in the following section .
+
+
+
+
+
 
 #### Use of side missions to encourage varied creative practices
 
@@ -1280,7 +1276,9 @@ In this extract participants are invited to take turns showing their game, recap
 Perhaps add back in as an unintended consequence?
 The live chat process started unintentionally as one child was left to their own devices as a parent was undertaking a social mission (see below and previous chapter). -->
 
-In addition to the the main mission of given in role to make a game to entertain and inform visiting aliens, and extra social and secret mission were delivered with the frame of a drama process, with an explicit aim to encourage community-focused patterns of behaviour which had emerged in previous iterations of game making. These include social aspect of playtesting and playful interactions, explored in later section in this chapter, which I had identified these behaviours as potentially helpful in maintaining the positive affect and identification with the on-going group process of game making.
+In addition to the the main mission of given in role to make a game to entertain and inform visiting aliens, and extra social and secret mission were delivered with the frame of a drama process, with an explicit aim to encourage community-focused patterns of behaviour which had emerged in previous iterations of game making.
+
+These include social aspect of playtesting and playful interactions, explored in later section in this chapter, which I had identified these behaviours as potentially helpful in maintaining the positive affect and identification with the on-going group process of game making.
 
 <!-- AN EXAMPLE HELPFUL? -->
 
@@ -1348,26 +1346,6 @@ The positive reaction of young people to the drama process was also picked up in
     Mark: The Weean thing was, I think, a massive hit for everybody because it just brought sense of play and fun. And it took attention away from it being overtly technical. Brought a personal element in and obviously that anarchy. Kids love the absurd.
 
 
-#### Reflecting in role
-
-**It doesn't look like we've got anywhere but we have!**
-
-<!-- **My reflections as a practorganiser itioner from my journal and those emerging from the process of transcribing and analysing the interactions.** -->
-
-While drama scenarios can aid reflection both in or out of drama, O'Neill and Lambert outline the value of in-drama reflection, noting it is "likely to be more powerful than end-of-session discussion, since it allows individual and group insight to be articulated as part of the context" [-@oneill_drama_1982, p. 144]. In line with this intervention, they propose one way of achieving in-role reflection is to introduce an additional character that acts as an external audience. In this intervention however, main activities happen only weakly in role, whereas the end reflection highlights the fictional frame of the making more strongly.
-
-In my journal notes for phases prior to using the drama process, I documented that the occasional end of session debriefs as _go-rounds_ had limited success in terms of amount and quality of participation compared to these sessions. The video and audio recordings document rich feedback from individuals and pair teams, near complete participation and productive elements of interaction as the feedback progresses.
-
-In previous iterations, my omission of end-reflection in sessions stemmed fomr a lack of time in sessions and reluctance to shift learners away from making activities to reflective activities. I found the need to maintain the drama narrative served as a high motivation factor to complete reflection activities.
-
-To begin the reflection session I ask participants to gather around a particular computer which the aliens are monitoring which helped moving participants closer to each other and stop their coding activity. It is of value to review the grouping of participants in the still image in the vignette above in Fig 5.x. The simple clustering of participants so they were side by side and talking to a disembodied audience via a computer seemed to make the feedback process less daunting for students. One of the younger participants Richie is participating on the margins but clearly following proceedings as his facial reactions to ongoing contents of feedback. He later participates more actively when reflecting on his process than in previous sessions. Even participants that were initially reluctant to share back and had never shared back publicly before in sessions, chipped in after other family member had started the process for them.  
-
-<!-- MORE DETAILS ON DATA? A QUICK SUMMARY PERHAPS OF
-NOTE ON CODING - LIMITED -->
-
-Using the terms of student agency explored in the literature review, here we can see the use of the drama narrative used as a second stimulus both by facilitator to help convene learners and to help them participate in reflection, and project sharing [@sannino_principle_2015].  
-
-
 <!-- While not all participants engaged with written tutorials. The next chapter explores the process in more detail from the perspective of a participant wanting to implement a particular game design pattern. -->
 
 <!-- This observation is supported by research which encourages varied approaches in addition to instruction-based approaches [@dietz_design_2021; @resnick_coding_2020]. Other studies address barriers to literacy in technical project work  explore written instructions within the drama frame thus providing a greater incentive for participants to engage with the material [@blunden2014seeking]. [SEE LIT REVIEW FOR MORE EXPLORATION]. -->
@@ -1428,9 +1406,6 @@ To express this using affordance theory, the affordance offered by the medium of
 <!-- NOTES
 - identity of playfulness  
   -->
-
-
-
 
 #### Concluding remarks on process drama
 
