--- a/_posts/thesis_chapters/tocs/2024-3-4-Design.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2024-3-4-Design.md_toc.md
@@ -58,21 +58,18 @@
         activity](#responding-to-tensions-and-barriers-in-cultural-aspects-of-the-game-making-activity)
         -   [Conflicts due to identity clashes and dysfunctional group
             work](#conflicts-due-to-identity-clashes-and-dysfunctional-group-work)
-        -   [Using Physical Maps of Missions as Game Design
-            Patterns](#using-physical-maps-of-missions-as-game-design-patterns)
+        -   [REMOVED](#removed)
         -   [On a drama processes](#on-a-drama-processes)
             -   [A game encouraging maker / player
                 types](#a-game-encouraging-maker-player-types)
             -   [Description drama process using extracts from
-                vignettes](#description-drama-process-using-extracts-from-vignettes)
-            -   [Description of Vignette
-                4.1.b](#description-of-vignette-4.1.b)
+                vignettes - LINK TO VIGNETTE
+                ONE](#description-drama-process-using-extracts-from-vignettes---link-to-vignette-one)
             -   [Use of side missions to encourage varied creative
                 practices](#use-of-side-missions-to-encourage-varied-creative-practices)
             -   [Relevant observations on side missions and drama from
                 the
                 data](#relevant-observations-on-side-missions-and-drama-from-the-data)
-            -   [Reflecting in role](#reflecting-in-role)
             -   [Observations on written interactions with the alien in
                 the
                 drama](#observations-on-written-interactions-with-the-alien-in-the-drama)
